<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.CustomizeColorsActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="211dp"
        android:layout_height="206dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/Logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/goodMoodButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/circle_button"
        android:fontFamily="sans-serif-medium"
        android:text="@string/plus"
        android:textAllCaps="false"
        android:textColor="#878787"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectMoodColorText"
        tools:ignore="TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/badMoodButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/circle_button"
        android:fontFamily="sans-serif-medium"
        android:text="@string/minus"
        android:textAllCaps="false"
        android:textColor="#878787"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectMoodColorText"
        tools:ignore="TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/okayMoodButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/circle_button"
        android:fontFamily="sans-serif-medium"
        android:text="@string/plusminus"
        android:textAllCaps="false"
        android:textColor="#878787"
        android:textSize="26sp"
        app:layout_constraintEnd_toStartOf="@+id/badMoodButton"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toEndOf="@+id/goodMoodButton"
        app:layout_constraintTop_toBottomOf="@+id/selectMoodColorText"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/selectMoodColorText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/select_a_mood_and_pick_a_color"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonOK"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/rounded_valencia_button"
        android:fontFamily="sans-serif-medium"
        android:text="@string/ok"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoText"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/infoText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="50dp"
        android:text="@string/don_t_worry_you_can_change_the_color_scheme_at_any_time"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/okayMoodButton" />

</androidx.constraintlayout.widget.ConstraintLayout>