<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/alignedCircles"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="left"
    android:orientation="horizontal">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/positiveButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="sans-serif-medium"
        android:background="@drawable/circle_button"
        android:text="@string/plus"
        android:textAllCaps="false"
        android:textColor="#878787"
        android:textSize="26sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/negativeButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/circle_button"
        android:fontFamily="sans-serif-medium"
        android:text="@string/minus"
        android:textAllCaps="false"
        android:textColor="#878787"
        android:textSize="26sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/neutralButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/circle_button"
        android:fontFamily="sans-serif-medium"
        android:text="@string/plusminus"
        android:textAllCaps="false"
        android:textColor="#878787"
        android:textSize="26sp" />

</LinearLayout>